@startuml
skinparam dpi 500
skinparam linetype ortho

'https://plantuml.com/class-diagram
hide members
set separator ::


class Communication {
	+ Communication(HardwareSerial*, long)
    + void begin()
    + void sendChar(char)
    + void sendCode(Codes)
    + char readChar()
    + Codes readCode()
    + String readString()
    + int received()
    # long speed
    # HardwareSerial* serial

}

enum Codes

struct LEDArray

namespace Computer {
	class Program {
		# State** states
		# int n
		+ Program(State**)
		+ void compute(Communication&)
		+ int encode(bool*, int)
		+ {static} Program decode(bool*, int)
	}

	enum Cell

    enum Direction

	together {
	    struct Instruction

	    struct State

		struct PartialState
    }

    struct PartialInstruction


	class Tape {
		+ Tape()
		+ void update()
        + void update(int, int)
        + bool move(Direction)
        + Cell& read()
        + int head
        - LEDArray blanks
        - LEDArray ones
        - Cell buffer[TAPE_LENGTH]

    }

	Instruction <|-- PartialInstruction
	State <|-- PartialState

	Direction --* Instruction
	Cell --* Instruction
	Instruction --* State
	State <-- Instruction
	State --* Program
	Communication <-- Program
	Codes <-- Communication
	Tape --> Direction
	Cell --* Tape
	LEDArray --* Tape

	show Program members
	show Tape members

}

show Communication members

@enduml